kubernetes/ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: nginx-app
  labels: 
    app: nginx-app
spec: 
  replicas: 3 
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata: 
      labels: 
        app: nginx-app
    spec: 
      containers:
      - name: nginx
        image: tanmaytech/httpd-server:v1
        ports:
        - containerPort: 80
