kubernetes/ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-port
spec:
  type: NodePort
  selector:
    app: nginx-app 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30007
